--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
   "author": "tangyuxiaobao",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "babel-loader": "^8.0.0-beta.0",
     "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10"
+    "webpack-cli": "^3.3.10",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "vue": "^2.6.10"
